# Portfolio26

./: .gitignore  README.md
RAG/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  retrieval.py
RAG/data/: blockchain_healthcare.md  intrusion.md  job.md  market.md
RAG/dataIngestion/: loader.py
RAG/faiss_index/: index.faiss  index.pkl
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AboutTimeline.jsx  AiAssistant.jsx  ContactTerminal.jsx  CyberneticAiCore.jsx  EducationSection.jsx  ExperienceSection.jsx  FeaturedProjects.jsx  Footer.jsx  Hero.jsx  MasterCanvasBackground.jsx  MasterLoadingScreen.jsx  Navbar.jsx  SkillsGrid.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/utils/: audioSystem.js
