[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "huggingface-hub>=0.33.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
